libqt6c/src/libqfilesystemmodel.hpp

typedef struct QAbstractFileIconProvider QAbstractFileIconProvider;
typedef struct QDateTime QDateTime;
typedef struct QDir QDir;
typedef struct QEvent QEvent;
typedef struct QFileInfo QFileInfo;
typedef struct QFileSystemModel QFileSystemModel;
typedef struct QIcon QIcon;
typedef struct QMetaObject QMetaObject;
typedef struct QMimeData QMimeData;
typedef struct QModelIndex QModelIndex;
typedef struct QObject QObject;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
QFileSystemModel* QFileSystemModel_new();
QFileSystemModel* QFileSystemModel_new2(QObject* parent);
QMetaObject* QFileSystemModel_MetaObject(const QFileSystemModel* self);
void QFileSystemModel_RootPathChanged(QFileSystemModel* self, const libqt_string newPath);
void QFileSystemModel_FileRenamed(QFileSystemModel* self, const libqt_string path, const libqt_string oldName, const libqt_string newName);
void QFileSystemModel_DirectoryLoaded(QFileSystemModel* self, const libqt_string path);
QModelIndex* QFileSystemModel_Index(const QFileSystemModel* self, int row, int column, const QModelIndex* parent);
QModelIndex* QFileSystemModel_Index2(const QFileSystemModel* self, const libqt_string path);
QModelIndex* QFileSystemModel_Parent(const QFileSystemModel* self, const QModelIndex* child);
QModelIndex* QFileSystemModel_Sibling(const QFileSystemModel* self, int row, int column, const QModelIndex* idx);
bool QFileSystemModel_HasChildren(const QFileSystemModel* self, const QModelIndex* parent);
bool QFileSystemModel_CanFetchMore(const QFileSystemModel* self, const QModelIndex* parent);
void QFileSystemModel_FetchMore(QFileSystemModel* self, const QModelIndex* parent);
int QFileSystemModel_RowCount(const QFileSystemModel* self, const QModelIndex* parent);
int QFileSystemModel_ColumnCount(const QFileSystemModel* self, const QModelIndex* parent);
QVariant* QFileSystemModel_MyComputer(const QFileSystemModel* self);
QVariant* QFileSystemModel_Data(const QFileSystemModel* self, const QModelIndex* index, int role);
bool QFileSystemModel_SetData(QFileSystemModel* self, const QModelIndex* index, const QVariant* value, int role);
QVariant* QFileSystemModel_HeaderData(const QFileSystemModel* self, int section, int orientation, int role);
int QFileSystemModel_Flags(const QFileSystemModel* self, const QModelIndex* index);
void QFileSystemModel_Sort(QFileSystemModel* self, int column, int order);
QStringList QFileSystemModel_MimeTypes(const QFileSystemModel* self);
QMimeData* QFileSystemModel_MimeData(const QFileSystemModel* self, const libqt_list /* of QModelIndex* */ indexes);
bool QFileSystemModel_DropMimeData(QFileSystemModel* self, const QMimeData* data, int action, int row, int column, const QModelIndex* parent);
int QFileSystemModel_SupportedDropActions(const QFileSystemModel* self);
libqt_map /* of int to libqt_string */ QFileSystemModel_RoleNames(const QFileSystemModel* self);
QModelIndex* QFileSystemModel_SetRootPath(QFileSystemModel* self, const libqt_string path);
libqt_string QFileSystemModel_RootPath(const QFileSystemModel* self);
QDir* QFileSystemModel_RootDirectory(const QFileSystemModel* self);
void QFileSystemModel_SetIconProvider(QFileSystemModel* self, QAbstractFileIconProvider* provider);
QAbstractFileIconProvider* QFileSystemModel_IconProvider(const QFileSystemModel* self);
void QFileSystemModel_SetFilter(QFileSystemModel* self, int filters);
int QFileSystemModel_Filter(const QFileSystemModel* self);
void QFileSystemModel_SetResolveSymlinks(QFileSystemModel* self, bool enable);
bool QFileSystemModel_ResolveSymlinks(const QFileSystemModel* self);
void QFileSystemModel_SetReadOnly(QFileSystemModel* self, bool enable);
bool QFileSystemModel_IsReadOnly(const QFileSystemModel* self);
void QFileSystemModel_SetNameFilterDisables(QFileSystemModel* self, bool enable);
bool QFileSystemModel_NameFilterDisables(const QFileSystemModel* self);
void QFileSystemModel_SetNameFilters(QFileSystemModel* self, const QStringList* filters);
QStringList QFileSystemModel_NameFilters(const QFileSystemModel* self);
void QFileSystemModel_SetOption(QFileSystemModel* self, int option);
bool QFileSystemModel_TestOption(const QFileSystemModel* self, int option);
void QFileSystemModel_SetOptions(QFileSystemModel* self, int options);
int QFileSystemModel_Options(const QFileSystemModel* self);
libqt_string QFileSystemModel_FilePath(const QFileSystemModel* self, const QModelIndex* index);
bool QFileSystemModel_IsDir(const QFileSystemModel* self, const QModelIndex* index);
long long QFileSystemModel_Size(const QFileSystemModel* self, const QModelIndex* index);
libqt_string QFileSystemModel_Type(const QFileSystemModel* self, const QModelIndex* index);
QDateTime* QFileSystemModel_LastModified(const QFileSystemModel* self, const QModelIndex* index);
QModelIndex* QFileSystemModel_Mkdir(QFileSystemModel* self, const QModelIndex* parent, const libqt_string name);
bool QFileSystemModel_Rmdir(QFileSystemModel* self, const QModelIndex* index);
libqt_string QFileSystemModel_FileName(const QFileSystemModel* self, const QModelIndex* index);
QIcon* QFileSystemModel_FileIcon(const QFileSystemModel* self, const QModelIndex* index);
int QFileSystemModel_Permissions(const QFileSystemModel* self, const QModelIndex* index);
QFileInfo* QFileSystemModel_FileInfo(const QFileSystemModel* self, const QModelIndex* index);
bool QFileSystemModel_Remove(QFileSystemModel* self, const QModelIndex* index);
void QFileSystemModel_TimerEvent(QFileSystemModel* self, QTimerEvent* event);
bool QFileSystemModel_Event(QFileSystemModel* self, QEvent* event);
QModelIndex* QFileSystemModel_Index22(const QFileSystemModel* self, const libqt_string path, int column);
QVariant* QFileSystemModel_MyComputer1(const QFileSystemModel* self, int role);
void QFileSystemModel_SetOption2(QFileSystemModel* self, int option, bool on);
void QFileSystemModel_Delete(QFileSystemModel* self);