QtBeef/src/Qt/qfilesystemmodel.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QFileSystemModel
// --------------------------------------------------------------
[CRepr]
struct QFileSystemModel_Ptr: void
{
}
extension CQt
{
	[LinkName("QFileSystemModel_new")]
	public static extern QFileSystemModel_Ptr* QFileSystemModel_new();
	[LinkName("QFileSystemModel_new2")]
	public static extern QFileSystemModel_Ptr* QFileSystemModel_new2(QObject_Ptr* parent);
	[LinkName("QFileSystemModel_Delete")]
	public static extern void QFileSystemModel_Delete(QFileSystemModel_Ptr* self);
	[LinkName("QFileSystemModel_MetaObject")]
	public static extern QMetaObject_Ptr* QFileSystemModel_MetaObject(QFileSystemModel_Ptr* self);
	[LinkName("QFileSystemModel_Qt_Metacast")]
	public static extern void* QFileSystemModel_Qt_Metacast(QFileSystemModel_Ptr* self, c_char* param1);
	[LinkName("QFileSystemModel_Qt_Metacall")]
	public static extern c_int QFileSystemModel_Qt_Metacall(QFileSystemModel_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QFileSystemModel_Tr")]
	public static extern libqt_string QFileSystemModel_Tr(c_char* s);
	[LinkName("QFileSystemModel_RootPathChanged")]
	public static extern void QFileSystemModel_RootPathChanged(QFileSystemModel_Ptr* self, libqt_string* newPath);
	[LinkName("QFileSystemModel_FileRenamed")]
	public static extern void QFileSystemModel_FileRenamed(QFileSystemModel_Ptr* self, libqt_string* path, libqt_string* oldName, libqt_string* newName);
	[LinkName("QFileSystemModel_DirectoryLoaded")]
	public static extern void QFileSystemModel_DirectoryLoaded(QFileSystemModel_Ptr* self, libqt_string* path);
	[LinkName("QFileSystemModel_Index")]
	public static extern QModelIndex_Ptr QFileSystemModel_Index(QFileSystemModel_Ptr* self, c_int row, c_int column, QModelIndex_Ptr* parent);
	[LinkName("QFileSystemModel_Index2")]
	public static extern QModelIndex_Ptr QFileSystemModel_Index2(QFileSystemModel_Ptr* self, libqt_string* path);
	[LinkName("QFileSystemModel_Parent")]
	public static extern QModelIndex_Ptr QFileSystemModel_Parent(QFileSystemModel_Ptr* self, QModelIndex_Ptr* child);
	[LinkName("QFileSystemModel_Sibling")]
	public static extern QModelIndex_Ptr QFileSystemModel_Sibling(QFileSystemModel_Ptr* self, c_int row, c_int column, QModelIndex_Ptr* idx);
	[LinkName("QFileSystemModel_HasChildren")]
	public static extern bool QFileSystemModel_HasChildren(QFileSystemModel_Ptr* self, QModelIndex_Ptr* parent);
	[LinkName("QFileSystemModel_CanFetchMore")]
	public static extern bool QFileSystemModel_CanFetchMore(QFileSystemModel_Ptr* self, QModelIndex_Ptr* parent);
	[LinkName("QFileSystemModel_FetchMore")]
	public static extern void QFileSystemModel_FetchMore(QFileSystemModel_Ptr* self, QModelIndex_Ptr* parent);
	[LinkName("QFileSystemModel_RowCount")]
	public static extern c_int QFileSystemModel_RowCount(QFileSystemModel_Ptr* self, QModelIndex_Ptr* parent);
	[LinkName("QFileSystemModel_ColumnCount")]
	public static extern c_int QFileSystemModel_ColumnCount(QFileSystemModel_Ptr* self, QModelIndex_Ptr* parent);
	[LinkName("QFileSystemModel_MyComputer")]
	public static extern QVariant_Ptr QFileSystemModel_MyComputer(QFileSystemModel_Ptr* self);
	[LinkName("QFileSystemModel_Data")]
	public static extern QVariant_Ptr QFileSystemModel_Data(QFileSystemModel_Ptr* self, QModelIndex_Ptr* index, c_int role);
	[LinkName("QFileSystemModel_SetData")]
	public static extern bool QFileSystemModel_SetData(QFileSystemModel_Ptr* self, QModelIndex_Ptr* index, QVariant_Ptr* value, c_int role);
	[LinkName("QFileSystemModel_HeaderData")]
	public static extern QVariant_Ptr QFileSystemModel_HeaderData(QFileSystemModel_Ptr* self, c_int section, Qt_Orientation orientation, c_int role);
	[LinkName("QFileSystemModel_Flags")]
	public static extern void* QFileSystemModel_Flags(QFileSystemModel_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QFileSystemModel_Sort")]
	public static extern void QFileSystemModel_Sort(QFileSystemModel_Ptr* self, c_int column, Qt_SortOrder order);
	[LinkName("QFileSystemModel_MimeTypes")]
	public static extern void* QFileSystemModel_MimeTypes(QFileSystemModel_Ptr* self);
	[LinkName("QFileSystemModel_MimeData")]
	public static extern QMimeData_Ptr* QFileSystemModel_MimeData(QFileSystemModel_Ptr* self, void** indexes);
	[LinkName("QFileSystemModel_DropMimeData")]
	public static extern bool QFileSystemModel_DropMimeData(QFileSystemModel_Ptr* self, QMimeData_Ptr* data, Qt_DropAction action, c_int row, c_int column, QModelIndex_Ptr* parent);
	[LinkName("QFileSystemModel_SupportedDropActions")]
	public static extern void* QFileSystemModel_SupportedDropActions(QFileSystemModel_Ptr* self);
	[LinkName("QFileSystemModel_RoleNames")]
	public static extern void* QFileSystemModel_RoleNames(QFileSystemModel_Ptr* self);
	[LinkName("QFileSystemModel_SetRootPath")]
	public static extern QModelIndex_Ptr QFileSystemModel_SetRootPath(QFileSystemModel_Ptr* self, libqt_string* path);
	[LinkName("QFileSystemModel_RootPath")]
	public static extern libqt_string QFileSystemModel_RootPath(QFileSystemModel_Ptr* self);
	[LinkName("QFileSystemModel_RootDirectory")]
	public static extern QDir_Ptr QFileSystemModel_RootDirectory(QFileSystemModel_Ptr* self);
	[LinkName("QFileSystemModel_SetIconProvider")]
	public static extern void QFileSystemModel_SetIconProvider(QFileSystemModel_Ptr* self, QAbstractFileIconProvider_Ptr* provider);
	[LinkName("QFileSystemModel_IconProvider")]
	public static extern QAbstractFileIconProvider_Ptr* QFileSystemModel_IconProvider(QFileSystemModel_Ptr* self);
	[LinkName("QFileSystemModel_SetFilter")]
	public static extern void QFileSystemModel_SetFilter(QFileSystemModel_Ptr* self, void* filters);
	[LinkName("QFileSystemModel_Filter")]
	public static extern void* QFileSystemModel_Filter(QFileSystemModel_Ptr* self);
	[LinkName("QFileSystemModel_SetResolveSymlinks")]
	public static extern void QFileSystemModel_SetResolveSymlinks(QFileSystemModel_Ptr* self, bool enable);
	[LinkName("QFileSystemModel_ResolveSymlinks")]
	public static extern bool QFileSystemModel_ResolveSymlinks(QFileSystemModel_Ptr* self);
	[LinkName("QFileSystemModel_SetReadOnly")]
	public static extern void QFileSystemModel_SetReadOnly(QFileSystemModel_Ptr* self, bool enable);
	[LinkName("QFileSystemModel_IsReadOnly")]
	public static extern bool QFileSystemModel_IsReadOnly(QFileSystemModel_Ptr* self);
	[LinkName("QFileSystemModel_SetNameFilterDisables")]
	public static extern void QFileSystemModel_SetNameFilterDisables(QFileSystemModel_Ptr* self, bool enable);
	[LinkName("QFileSystemModel_NameFilterDisables")]
	public static extern bool QFileSystemModel_NameFilterDisables(QFileSystemModel_Ptr* self);
	[LinkName("QFileSystemModel_SetNameFilters")]
	public static extern void QFileSystemModel_SetNameFilters(QFileSystemModel_Ptr* self, void** filters);
	[LinkName("QFileSystemModel_NameFilters")]
	public static extern void* QFileSystemModel_NameFilters(QFileSystemModel_Ptr* self);
	[LinkName("QFileSystemModel_SetOption")]
	public static extern void QFileSystemModel_SetOption(QFileSystemModel_Ptr* self, QFileSystemModel_Option option);
	[LinkName("QFileSystemModel_TestOption")]
	public static extern bool QFileSystemModel_TestOption(QFileSystemModel_Ptr* self, QFileSystemModel_Option option);
	[LinkName("QFileSystemModel_SetOptions")]
	public static extern void QFileSystemModel_SetOptions(QFileSystemModel_Ptr* self, void* options);
	[LinkName("QFileSystemModel_Options")]
	public static extern void* QFileSystemModel_Options(QFileSystemModel_Ptr* self);
	[LinkName("QFileSystemModel_FilePath")]
	public static extern libqt_string QFileSystemModel_FilePath(QFileSystemModel_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QFileSystemModel_IsDir")]
	public static extern bool QFileSystemModel_IsDir(QFileSystemModel_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QFileSystemModel_Size")]
	public static extern c_longlong QFileSystemModel_Size(QFileSystemModel_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QFileSystemModel_Type")]
	public static extern libqt_string QFileSystemModel_Type(QFileSystemModel_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QFileSystemModel_LastModified")]
	public static extern QDateTime_Ptr QFileSystemModel_LastModified(QFileSystemModel_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QFileSystemModel_Mkdir")]
	public static extern QModelIndex_Ptr QFileSystemModel_Mkdir(QFileSystemModel_Ptr* self, QModelIndex_Ptr* parent, libqt_string* name);
	[LinkName("QFileSystemModel_Rmdir")]
	public static extern bool QFileSystemModel_Rmdir(QFileSystemModel_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QFileSystemModel_FileName")]
	public static extern libqt_string QFileSystemModel_FileName(QFileSystemModel_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QFileSystemModel_FileIcon")]
	public static extern QIcon_Ptr QFileSystemModel_FileIcon(QFileSystemModel_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QFileSystemModel_Permissions")]
	public static extern void* QFileSystemModel_Permissions(QFileSystemModel_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QFileSystemModel_FileInfo")]
	public static extern QFileInfo_Ptr QFileSystemModel_FileInfo(QFileSystemModel_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QFileSystemModel_Remove")]
	public static extern bool QFileSystemModel_Remove(QFileSystemModel_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QFileSystemModel_TimerEvent")]
	public static extern void QFileSystemModel_TimerEvent(QFileSystemModel_Ptr* self, QTimerEvent_Ptr* event);
	[LinkName("QFileSystemModel_Event")]
	public static extern bool QFileSystemModel_Event(QFileSystemModel_Ptr* self, QEvent_Ptr* event);
	[LinkName("QFileSystemModel_Tr2")]
	public static extern libqt_string QFileSystemModel_Tr2(c_char* s, c_char* c);
	[LinkName("QFileSystemModel_Tr3")]
	public static extern libqt_string QFileSystemModel_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QFileSystemModel_Index22")]
	public static extern QModelIndex_Ptr QFileSystemModel_Index22(QFileSystemModel_Ptr* self, libqt_string* path, c_int column);
	[LinkName("QFileSystemModel_MyComputer1")]
	public static extern QVariant_Ptr QFileSystemModel_MyComputer1(QFileSystemModel_Ptr* self, c_int role);
	[LinkName("QFileSystemModel_SetOption2")]
	public static extern void QFileSystemModel_SetOption2(QFileSystemModel_Ptr* self, QFileSystemModel_Option option, bool on);
}
